--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -363,3 +363,6 @@ $box-shadow: 0 1px 2px rgba(#000, 0.25) !default;
 $box-shadow-heavy: 0 0 7px rgba(#000, 0.3) !default;
 
 $box-shadow-drop-down: 0 1px 3px rgba(#000, 0.5) !default;
+
+/* Drop down menu max height */
+$drop-down-max-height: 230px !default;
