--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -6,7 +6,7 @@
 
   <%# Contain 'filters', 'map/list toggle', and 'listings' %>
   <%# [BACKEND] append `is-filter-applied` class to this container when a category filter has been applied %>
-  <div class="stores-maps__inner">
+  <div class="stores-maps__inner js-pjax-container">
 
     <%# Filters & list/map toggle button %>
     <div class="stores-maps__filters-toggle">
@@ -77,7 +77,7 @@
 
               <%# Store name %>
               <div class="stores-list__store-name">
-                <strong><%= link_to store.name, (centre_store_url @centre.code , store.id), data: {'store-id' => store.id} %></strong>
+                <strong><%= link_to store.name, (centre_store_url @centre.code , store.id), class: 'js-pjax-link' %></strong>
                 <%# <strong><%= store.name %1></strong> %>
                 <%# Phone no %>
                 <span class="hide-fully--palm"><%= store.phone_number %></span>
@@ -131,6 +131,12 @@
     </div>
     <%#//Stores list %>
 
+    <%= javascript_tag do %>
+      function storeMapPageReady() {
+        $('.js-defer-image-load-container').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
+      }
+    <% end %>
+
   </div>
   <%# //Contain 'filters', 'map/list toggle', and 'listings' %>
 
@@ -141,31 +147,7 @@
   <%# //Map %>
 
   <%- content_for :javascript do -%>
-    <%= javascript_include_tag 'map/responsive_map' %>
-    <%= javascript_tag do %>
-      var map = new map.ResponsiveMap({
-        breakpoint: 'all and (min-width: 64em)',
-        palm: { offset: {x: 0.5, y: 0.5} },
-        nonPalm: { offset: {x: 0.75, y: 0.5} }
-      });
-
-      function toggleMap() {
-        var visible = map.toggle();
-        $('.js-stores-maps-toggle-btn').toggleClass('is-expanded', visible);   <%# toggle button        %>
-        $('.js-stores-maps-toggle-btn__txt').html(visible ? 'list' : 'map');   <%# toggle button text   %>
-        $('.js-stores-maps-toggle-wrap').toggleClass('is-map-view', visible);  <%# store list container %>
-      }
-
-      $('.js-stores-maps-toggle-btn').on('click', toggleMap);
-
-      $('[data-store-id]').on('click', function() {
-        map.store($(this).data('store-id'))
-        toggleMap();
-      });
-
-      $('.js-defer-image-load-container').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
-    <% end %>
+    <%= javascript_include_tag 'store_map_page' %>
   <%- end -%>
-
 
 </div>
