Updated flat rate parking copy.

--- a/app/views/centre_info/_parking_fixed_rate.html.erb
+++ b/app/views/centre_info/_parking_fixed_rate.html.erb
@@ -1,6 +1,6 @@
 <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
   <div class="grid__item non-palm-one-half">
-    <p>All parking is a fixed price of $<%= @parking.flat_rate %></p>
+    <p>Fixed Parking rate of $<%= @parking.flat_rate %> per day</p>
 
     <%= render partial: 'parking_terms_and_conditions', locals: {align: 'left'} %>
   </div>
