--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -51,7 +51,7 @@
 
 			<%# Centre select (non-palm) %>
 			<nav class="header-centre-select-national hide-fully--palm" role="navigation">
-				<h1>Choose a <span class="header-centre-select-national__lbl hide-visually">centre to see products, deals, events, and centre info:</span></h1>
+				<h1>Choose a <span class="hide-visually">centre to see products, deals, events, and centre info:</span></h1>
 				<div class="drop-down-menu drop-down-container">
           <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="header-menu-toggle-non-palm">Westfield Centre<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
           <div class="drop-down-menu__target drop-down box box--drop-down" id="header-menu-toggle-non-palm">
