Removing duplicate padding for alternate site header for national view - WSF-5066

--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -94,11 +94,8 @@
     /* Sub header */
     .drop-down-menu__hdr-sub {
       color: $color-light-txt;
-      @include to-rem(padding-left padding-right, $spacing-sixth);
+      @include to-rem(padding-top padding-bottom, $spacing-micro);
       @include to-rem(padding-left padding-right, $spacing-half);
-
-      /* Abbreviation */
-      abbr {border-bottom: 0;}
     }
 
     /* Divider */
