Reorderd the css class names

--- a/app/views/layouts/_pin_board.html.erb
+++ b/app/views/layouts/_pin_board.html.erb
@@ -1,4 +1,4 @@
-<div id="pin-board" class="grid pin-board no-js grid--gutter-half">
+<div id="pin-board" class="pin-board grid grid--gutter-half">
   <%- rows.in_groups(2, false) do |row| -%>
     <div class="grid__item one-half">
       <% row.each do |result| %>
