Classes that are used in testing I've prefixed with test-, so they aren't confused when styling.

--- a/app/views/centre_info/_parking_rates.html.erb
+++ b/app/views/centre_info/_parking_rates.html.erb
@@ -13,9 +13,9 @@
         <tbody>
           <% @parking.rates.each do |rate| %>
             <tr>
-              <td class='times'><%= rate.hourly_rate_from %> - <%= rate.hourly_rate_to %>hrs</td>
-              <td class="weekday txt-right <%= "txt-caps" if rate.free? %>"><%= display_parking_rate(rate.hourly_rate_weekday) %></td>
-              <td class="weekend txt-right <%= "txt-caps" if rate.free? %>"><%= display_parking_rate(rate.hourly_rate_weekend) %></td>
+              <td class='test-times'><%= rate.hourly_rate_from %> - <%= rate.hourly_rate_to %>hrs</td>
+              <td class="test-weekday txt-right <%= "txt-caps" if rate.free? %>"><%= display_parking_rate(rate.hourly_rate_weekday) %></td>
+              <td class="test-weekend txt-right <%= "txt-caps" if rate.free? %>"><%= display_parking_rate(rate.hourly_rate_weekend) %></td>
             </tr>
           <% end %>
           <tr>
