--- a/app/views/centre_info/_parking_rates.html.erb
+++ b/app/views/centre_info/_parking_rates.html.erb
@@ -18,16 +18,20 @@
               <td class="test-weekend txt-right <%= "txt-caps" if rate.free? %>"><%= display_parking_rate(rate.hourly_rate_weekend) %></td>
             </tr>
           <% end %>
-          <tr>
-            <td>Maximum Daily Rate</td>
-            <td class="txt-right"><%= display_parking_rate(@parking.maximum_daily_rate_weekday) %></td>
-            <td class="txt-right"><%= display_parking_rate(@parking.maximum_daily_rate_weekend) %></td>
-          </tr>
-          <tr>
-            <td>Overnight Fee</td>
-            <td class="txt-right"><%= display_parking_rate(@parking.overnight_fee_weekday) %></td>
-            <td class="txt-right"><%= display_parking_rate(@parking.overnight_fee_weekend) %></td>
-          </tr>
+          <% if @parking.overnight_fee_weekday.to_i > 0 or @parking.overnight_fee_weekend.to_i > 0 %>
+            <tr>
+              <td>Maximum Daily Rate</td>
+              <td class="txt-right"><%= display_parking_rate(@parking.maximum_daily_rate_weekday, '-') %></td>
+              <td class="txt-right"><%= display_parking_rate(@parking.maximum_daily_rate_weekend, '-') %></td>
+            </tr>
+          <% end %>
+          <% if @parking.overnight_fee_weekday.to_i > 0 or @parking.overnight_fee_weekend.to_i > 0 %>
+            <tr>
+              <td>Overnight Fee</td>
+              <td class="txt-right"><%= display_parking_rate(@parking.overnight_fee_weekday, '-') %></td>
+              <td class="txt-right"><%= display_parking_rate(@parking.overnight_fee_weekend, '-') %></td>
+            </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
