--- a/app/views/centre_info/_parking_info.html.erb
+++ b/app/views/centre_info/_parking_info.html.erb
@@ -1,11 +1,11 @@
 <div class="grid__item non-palm-one-half">
-  <% @parking.additional_parking_information.split("\n").each do |paragraph| %>
+  <% to_paragraphs(@parking.additional_parking_information).each do |paragraph| %>
     <p><%= paragraph %></p>
   <% end %>
 
   <% unless @parking.valet_parking_instructions.empty? %>
     <h3>Valet Parking</h3>
-    <% @parking.valet_parking_instructions.split("\n").each do |paragraph| %>
+    <% to_paragraphs(@parking.valet_parking_instructions).each do |paragraph| %>
       <p><%= paragraph %></p>
     <% end %>
   <% end %>
