--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -313,6 +313,7 @@
           content: "";
           display: block;
           position: absolute;
+          z-index: 1;
           left: 0;
           right: 0;
           top: 0;
@@ -325,6 +326,7 @@
         .container {
           /* Needs `position: relative` so it will sit above the dark gradient which has `position: absolute` */
           position: relative;
+          z-index: 2;
           @include to-rem(padding, 30 $spacing-base 30 0);
 
           @include respond-min($non-palm) {
