Added comment about national centre tile

--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -313,6 +313,7 @@
           content: "";
           display: block;
           position: absolute;
+          /* To allow `.container` to stack on top of the gradient */
           z-index: 1;
           left: 0;
           right: 0;
