Remove redundant class

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -35,7 +35,7 @@
   <%# Header %>
   <header class="national__header img-rotate">
     <%# Rotating images %>
-    <div class="national__hero__1 img-rotate__item img-rotate__item__1"></div>
+    <div class="national__hero__1 img-rotate__item"></div>
     <%# //Rotating images %>
 
     <%# Container %>
