--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -57,7 +57,7 @@
               <dt class="hide-visually">Westfield gift card</dt>
               <dd>
                 <%= @store.accepts_giftcard? ? 'Gift card accepted' : 'Not accepted' %>
-                <span class="icon icon-gift-card icon--xlrg" aria-hidden="true"></span>
+                <span class="icon icon--gift-card icon--xlrg" aria-hidden="true"></span>
               </dd>
             </dl>
             <%# //Store meta %>
